tests/sksl/errors/ReservedNamePrecision.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'precision'
1 error
